--- a/index.html
+++ b/index.html
@@ -24,19 +24,26 @@
 </style>
 <script> 
     function gettingJSON(){
-    	console.log("Hi")
     	// Use the OpenWeather API to return:
     	//  the current temperature 
     	//  the high temperature for the day
     	//  the low temperature for the day
     	//  the icon for the current weather.
-		
 
-
-   	 
     	// The default should be Ann Abor/Fahreheit.
-		let query = "http://api.openweathermap.org/data/2.5/weather?id=4984247&units=imperial&APPID=f0c063258d8daef456abe13435b8ebcf";
-        console.log("Query is :" + query)
+		let city = "Ann+Arbor";
+		let unit = "imperial";
+		if ($("#celcius").is(':checked')) {
+          unit = "metric";
+        };
+		if ($("#fahrenheit").is(':checked')) {
+          unit = "imperial";
+        };
+		if ($("#location").val()) {
+			city = $("#location").val();
+		}
+        var query = "http://api.openweathermap.org/data/2.5/weather?q=" + city + "&units=" + unit + "&APPID=f0c063258d8daef456abe13435b8ebcf";
+		console.log("Query is :" + query)
 
         $.getJSON(query,function(json){
             console.log(JSON.stringify(json));
@@ -49,6 +56,7 @@
 			$("#tempImg").attr("title", json.weather[0].main);
     })
     }
+	
     </script>
 </head>
 <body>
